<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SenseApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="scroll_logs">Scroll Logs</string>
    <string name="clear_logs">Clear</string>
    <string name="toggle_service">Toggle Service</string>
    <string name="service_running">Running</string>
    <string name="service_stopped">Stopped</string>
    <string name="toggle_sms">Toggle SMS</string>
    <string name="default_service_file">sense_data.csv</string>
    <string name="default_sms_file">sms_data.csv</string>
    <string name="default_sms_frequency">300</string>
    <string name="data_file">Data File</string>
    <string name="sms_data_file">SMS Data File</string>
    <string name="sms_frequency">SMS Frequency</string>

</resources>